# remotesolutionvision

./: LICENSE  README.md  pyproject.toml
calibration/camera_under/: camera_intrinsic.json
dataset/templates/top_btn01/: roi.txt
dataset/templates/top_btn02/: roi.txt
dataset/templates/top_btn03/: roi.txt
dataset/templates/under_btn01/: roi.txt
dataset/templates/under_btn02/: roi.txt
dataset/templates/under_btn03/: roi.txt
pe/utils/: basler.py  basler_back.py  camera_utils.py  cv_interface.py  visualizer.py
scripts/: calibration_camera.py  create_rmc_dataset.py  plc_const.py  rmc_pe.py  sam2stream.py
